Pushing out factory skeleton for LUIS.

--- a/demoApp/src/index.html
+++ b/demoApp/src/index.html
@@ -52,6 +52,8 @@
            </md-button>
            <div class="copy-write">&#169; 2016 The Professionals </div>
        </section>
+
+        <button ng-click='openLuis()'>Test LUIS</button>
     <!--<div flex-xs flex-gt-xs="25" layout="column" ng-controller="BeaconCtrl">-->
         <!--<md-card md-theme="{{ showDarkTheme ? 'dark-grey' : 'default' }}" md-theme-watch>-->
             <!--<md-toolbar></md-toolbar>-->
