--- a/demoApp/src/index.html
+++ b/demoApp/src/index.html
@@ -46,29 +46,18 @@
         <section ng-view layout-align="center center">
         </section>
 
-       <section class="md-whiteframe-7dp footer" flex layout-padding>
-           <md-button class="md-fab md-primary" aria-label="Chat">
-               <i class="material-icons">chat_bubble_outline</i>
-           </md-button>
-           <div class="copy-write">&#169; 2016 The Professionals </div>
-       </section>
+        <div class="demo-md-panel md-padding" ng-controller="BasicDemoCtrl as ctrl">
+            <div layout="row">
+                <div class="demo-md-panel-content">
+                    <md-button class="md-fab md-primary" aria-label="Chat" ng-click="ctrl.showDialog($event)">
+                        <i class="material-icons">chat_bubble_outline</i>
+                    </md-button>
+                </div>
+            </div>
+        </div>
 
         <button ng-click='openLuis()'>Test LUIS</button>
-    <!--<div flex-xs flex-gt-xs="25" layout="column" ng-controller="BeaconCtrl">-->
-        <!--<md-card md-theme="{{ showDarkTheme ? 'dark-grey' : 'default' }}" md-theme-watch>-->
-            <!--<md-toolbar></md-toolbar>-->
-            <!--<div ng-bind="date | date"></div>-->
-            <!--<div class="user-chat" ng-repeat="message in userChats" ng-bind="message"></div>-->
-            <!--<div class="bot-chat" ng-repeat="chat in botChats" ng-bind="chat" tabindex="0"></div>-->
-            <!--<hr>-->
-            <!--<md-card-actions layout="row" layout-align="end center">-->
-                <!--<md-input-container md-no-float class="md-block">-->
-                    <!--<input ng-model="chatInput" type="text" placeholder="Type or ask your question">-->
-                <!--</md-input-container>-->
-                <!--<md-button class="md-fab" ng-click="submitUserChat()">Send</md-button>-->
-            <!--</md-card-actions>-->
-        <!--</md-card>-->
-    <!--</div>-->
+
         <!-- Angular Material requires Angular.js Libraries -->
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
@@ -84,5 +73,6 @@
         <!-- Your application bootstrap  -->
         <script src="js/app.js"></script>
         <script src="js/factory.js"></script>
+        <script src="js/beacon.js"></script>
     </body>
 </html>
