update with jobs

--- a/demoApp/src/index.html
+++ b/demoApp/src/index.html
@@ -45,18 +45,18 @@
         </section>
 
 
-        <div class="demo-md-panel md-padding" ng-controller="BasicDemoCtrl as ctrl">
-            <div layout="row">
-                <div class="demo-md-panel-content">
-                    <md-button class="md-fab md-primary" aria-label="Chat" ng-click="ctrl.showDialog($event)">
-                        <i class="material-icons">chat_bubble_outline</i>
-                    </md-button>
-                </div>
-            </div>
-        </div>
+        <!--<div class="demo-md-panel md-padding" ng-controller="BasicDemoCtrl as ctrl">-->
+            <!--<div layout="row">-->
+                <!--<div class="demo-md-panel-content">-->
+                    <!--<md-button class="md-fab md-primary" aria-label="Chat" ng-click="ctrl.showDialog($event)">-->
+                        <!--<i class="material-icons">chat_bubble_outline</i>-->
+                    <!--</md-button>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
 
-        <button ng-click='testFunction()'>Test Fund Service</button>
-        <button ng-click='testJobFilter()'>Test job filter</button>
+        <!--<button ng-click='testFunction()'>Test Fund Service</button>-->
+        <!--<button ng-click='testJobFilter()'>Test job filter</button>-->
 
         <!--<button ng-click='testFunction()'>Test Fund Service</button>-->
 
