--- a/demoApp/src/index.html
+++ b/demoApp/src/index.html
@@ -75,6 +75,7 @@
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-resource.js"></script>
         <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/t-114/svg-assets-cache.js"></script>
 
         <!-- Angular Material Library -->
@@ -82,5 +83,6 @@
 
         <!-- Your application bootstrap  -->
         <script src="js/app.js"></script>
+        <script src="js/factory.js"></script>
     </body>
 </html>
