factory.js new return jobs service app.js filter jobs function, test function index.html test button

--- a/demoApp/src/index.html
+++ b/demoApp/src/index.html
@@ -57,7 +57,7 @@
         </div>
 
         <button ng-click='testFunction()'>Test Fund Service</button>
-
+        <button ng-click='testJobFilter()'>Test job filter</button>
         <!-- Angular Material requires Angular.js Libraries -->
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
