app.css style for contacts contacts.html dummy page index.html correct contact link for mobile view

--- a/demoApp/src/index.html
+++ b/demoApp/src/index.html
@@ -36,7 +36,7 @@
                 <md-button ng-href="#home" ng-click="toggleSidenav('left')">Home</md-button>
                 <md-button ng-href="#account" ng-click="toggleSidenav('left')">Account information</md-button>
                 <md-button ng-href="#investing" ng-click="toggleSidenav('left')">Investing</md-button>
-                <md-button ng-href="#contact_us" ng-click="toggleSidenav('left')">Contact us</md-button>
+                <md-button ng-href="#contact" ng-click="toggleSidenav('left')">Contact us</md-button>
                 <md-button ng-href="#careers" ng-click="toggleSidenav('left')">Careers</md-button>
             </div>
         </md-sidenav>
