updates for Vanguard demo

--- a/demoApp/src/index.html
+++ b/demoApp/src/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc.5/angular-material.min.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="css/app.css">
-        <title>Demo App</title>
+        <title>Vanguard Demo App</title>
     </head>
     <body ng-cloak ng-controller="AppCtrl" class="grey-background">
         <div class="top-header"></div>
@@ -14,7 +14,7 @@
                  <md-button class="md-fab" ng-click="toggleSidenav('left')" hide-gt-md>
                      <i class="material-icons">menu</i>
                  </md-button>
-                 <h1 class="white-text">Voyager</h1>
+                 <h1 class="white-text">Vanguard</h1>
             </span>
             <span hide-xs hide-sm hide-md>
                 <md-nav-bar md-selected-nav-item="currentNavItem" nav-bar-aria-label="navigation links">
@@ -30,7 +30,7 @@
                 <input/>
             </span>
         </md-toolbar>
-        <md-sidenav class="md-sidenav-left md-whiteframe-z2 grey-background" md-component-id="left">
+        <md-sidenav class="md-sidenav-left md-whiteframe-z2 white-background" md-component-id="left">
             <md-toolbar></md-toolbar>
             <div layout="column" layout-padding>
                 <md-button ng-href="#home" ng-click="toggleSidenav('left')">Home</md-button>
